# Password_Checker

./: .gitignore  LICENSE  README.md  main.py  noxfile.py  password.py  pyproject.toml  setup.py
.github/workflows/: code_quality.yml  codeql-analysis.yml
password_checker/: __init__.py  app.py
