[tool.poetry]
name = "password-checker"
version = "1.0"
description = "Password Checker using Python 3.8"
authors = ["Simon Tallmyr <simon@tallmyr.se>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
