[tool.poetry]
name = "Password_Checker"
version = "1.0"
description = "Checks passwords against Have I Been Pwned Database"
authors = ["Simon Tallmyr <simon@tallmyr.se>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Tallmyr/Password-Checker"
repository = "https://github.com/Tallmyr/Password-Checker"
keywords = ["password"]

include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^21.9b0", allow-prereleases = true}
flake8-bugbear = "^21.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
